force-app/main/default/objects/WAC_RPT_Header__c/WAC_RPT_Header__c.object-meta.xml
<CustomObject>
    <description>WAC Report Header for each agency/run, outbound or inbound</description>
    <label>WAC RPT Header</label>
    <nameField>
        <displayFormat>WAC{0000000000}</displayFormat>
        <label>NAME (Report Seq)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WAC RPT Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>