force-app/main/default/objects/WAC_RPT_Header__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <referenceTo>WAC_Agency__c</referenceTo>
    <relationshipLabel>WAC RPT Header</relationshipLabel>
    <relationshipName>WAC_RPT_Header</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>