force-app/main/default/objects/WAC_RPT_Header__c/fields/ESFT_FILE_LOC_OUT__c.field-meta.xml
<CustomField>
    <fullName>ESFT_FILE_LOC_OUT__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>ESFT FILE LOC OUT</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>