force-app/main/default/objects/WAC_RPT_Header__c/fields/FILE_NAME__c.field-meta.xml
<CustomField>
    <fullName>FILE_NAME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FILE NAME</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>