force-app/main/default/objects/WAC_RPT_Header__c/fields/OUTBOUND_INBOUND__c.field-meta.xml
<CustomField>
    <fullName>OUTBOUND_INBOUND__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OUTBOUND INBOUND</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>