force-app/main/default/objects/WAC_RPT_Header__c/fields/RPT_DATE__c.field-meta.xml
<CustomField>
    <fullName>RPT_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RPT DATE</label>
    <type>Date</type>
</CustomField>