force-app/main/default/objects/WAC_RPT_Header__c/fields/RPT_NO__c.field-meta.xml
<CustomField>
    <fullName>RPT_NO__c</fullName>
    <displayFormat>WRH{000000000}</displayFormat>
    <externalId>true</externalId>
    <label>RPT NO</label>
    <type>AutoNumber</type>
</CustomField>