force-app/main/default/objects/WAC_RPT_Header__c/fields/STATUS_CODE__c.field-meta.xml
<CustomField>
    <fullName>STATUS_CODE__c</fullName>
    <label>STATUS CODE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>