force-app/main/default/objects/WAC_RPT_Header__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RPT_DATE__c</columns>
    <columns>Agency__c</columns>
    <columns>OUTBOUND_INBOUND__c</columns>
    <columns>STATUS_CODE__c</columns>
    <columns>UTILITY_CODE__c</columns>
    <columns>COMMENTS__c</columns>
    <columns>RPT_NO__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>